--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,8 @@ flutter:
     - assets/images/otp.png
     - assets/images/support.png
     - assets/images/otp_verification.png
+    - assets/icons/saved.png
+    - assets/icons/notsaved.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
