--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons/location_pin.png
+    - assets/icons/user_pin.png
+    - assets/icons/hospital_pin.png
     - assets/images/healthcare.png
     - assets/images/wsimg.png
     - assets/logo/google.png
