--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,16 @@ dependencies:
   iconsax_flutter: ^1.0.0
   yandex_mapkit: ^4.1.0
   geolocator: ^14.0.1
+  country_picker: ^2.0.27
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
+  cloud_firestore: ^5.6.8
+  firebase_storage: ^12.4.6
+  shared_preferences: ^2.5.3
+  provider: ^6.1.5
+  pinput: ^5.0.1
+  image_picker: ^1.1.2
+  firebase_app_check: ^0.3.2+6
 
 dev_dependencies:
   flutter_test:
@@ -123,6 +133,7 @@ flutter:
     - assets/images/otp_verification.png
     - assets/icons/saved.png
     - assets/icons/notsaved.png
+    - assets/images/profile.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
